<resources>
    <string name="app_name">RestaurantTracker</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="restaurant_tracker">Restaurant Tracker</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="landing_page">Landing Page</string>
    <string name="admin">Admin</string>
    <string name="preference_file_key">PreferenceFileNameRestaurantTracker</string>
    <string name="preference_userId_key">PreferenceUserIdKeyRestaurantTracker </string>
    <string name="logged_in">LOGGED IN</string>
    <string name="old_username">Old Username</string>
    <string name="new_username">New Username</string>
    <string name="change_username">Change Username</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="find_user">Find User</string>
    <string name="name">Name:</string>
    <string name="enter_restaurant_name">Enter restaurant name</string>
    <string name="cuisine">Cuisine:</string>
    <string name="enter_the_type_of_cuisine">Enter the type of cuisine</string>
    <string name="city">City:</string>
    <string name="enter_the_city_of_the_restaurant">Enter the city of the restaurant</string>
    <string name="enter_the_rating_from_1_5">Enter the rating from 1-5</string>
    <string name="rating">Rating:</string>
    <string name="add">Add</string>
    <string name="visted">Visted:</string>
    <string name="recycler_item_placeholder">recycler item placeholder</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="logout_prompt">Logout</string>
    <string name="logout">Logout?</string>
    <string name="randomize">Randomize</string>
    <string name="delete_user">Delete User</string>
    <string name="press_button_to_randomize">Press button to randomize</string>
    <string name="empty">empty</string>
</resources>